core/0.15.0/_sources/carrier-av-api.rst.txt
IOEX Carrier AV APIs
====================

Functions
---------

Common Control Functions
########################

IOEX_av_call
~~~~~~~~~~~~

.. doxygenfunction:: IOEX_av_call
   :project: CarrierAPI

IOEX_av_answer
~~~~~~~~~~~~~~

.. doxygenfunction:: IOEX_av_answer
   :project: CarrierAPI

IOEX_av_hangup
~~~~~~~~~~~~~~

.. doxygenfunction:: IOEX_av_hangup
   :project: CarrierAPI

IOEX_av_pause
~~~~~~~~~~~~~

.. doxygenfunction:: IOEX_av_pause
   :project: CarrierAPI

IOEX_av_resume
~~~~~~~~~~~~~~

.. doxygenfunction:: IOEX_av_resume
   :project: CarrierAPI

IOEX_av_get_info
~~~~~~~~~~~~~~~~

.. doxygenfunction:: IOEX_av_get_info
   :project: CarrierAPI

Audio Related Functions
#######################

IOEX_av_set_friend_audio_enable
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. doxygenfunction:: IOEX_av_set_friend_audio_enable
   :project: CarrierAPI

IOEX_av_set_audio_bitrate
~~~~~~~~~~~~~~~~~~~~~~~~~

.. doxygenfunction:: IOEX_av_set_audio_bitrate
   :project: CarrierAPI

IOEX_av_send_audio
~~~~~~~~~~~~~~~~~~

.. doxygenfunction:: IOEX_av_send_audio
   :project: CarrierAPI

Video Related Functions
#######################

IOEX_av_set_friend_video_enable
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

.. doxygenfunction:: IOEX_av_set_friend_video_enable
   :project: CarrierAPI

IOEX_av_set_video_bitrate
~~~~~~~~~~~~~~~~~~~~~~~~~

.. doxygenfunction:: IOEX_av_set_video_bitrate
   :project: CarrierAPI

IOEX_av_send_video
~~~~~~~~~~~~~~~~~~

.. doxygenfunction:: IOEX_av_send_video
   :project: CarrierAPI

